# ejada-project1

./: .gitignore  AGENTS.md  PROJECT.md  README.md  pyrightconfig.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/extraction/: README.md  __init__.py  adapter.py  gemini_engine.py  html_table.py  hybrid_engine.py  paddle_engine.py  pipeline.py
backend/scripts/: schema.sql
backend/tests/: test_gemini_engine.py  test_hybrid_engine.py  test_paddle_adapter.py  test_validation.py
docs/: extraction-result-example.json
frontend/: README.md  eslint.config.js  package-lock.json  package.json
frontend/src/: App.jsx  DocumentWorkbench.jsx  OCRWorkbench.jsx  api.js  document-workbench.css  index.css  ocr-workbench.css
frontend/src/components/: ExtractedTable.css  ExtractedTable.jsx
